--- a/public/src/app/app.component.css
+++ b/public/src/app/app.component.css
@@ -3,3 +3,15 @@
     border-radius: 10px;
     padding: 10px;
 }
+
+.show_task {
+    border: 5px solid blue;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.display_task {
+    border: 5px solid green;
+    border-radius: 10px;
+    padding: 10px;
+}
