--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+.root {
+    border: 5px solid orange;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.show_task {
+    border: 5px solid blue;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.display_task {
+    border: 5px solid green;
+    border-radius: 10px;
+    padding: 10px;
+}
